resolve conflict + mes offres et détail d'une offre

--- a/salesTraction/src/locales/fr.json
+++ b/salesTraction/src/locales/fr.json
@@ -10,6 +10,7 @@
     "presentationSpeech": "SalesTraction révolutionne la manière dont les startups early-stage trouvent leurs premiers clients, en connectant des étudiants ambitieux à des missions de vente rémunérées à la commission.\nGrâce à une interface inspirée des applis de rencontre, swipez les offres ou les profils, matchez, échangez, et commencez à vendre en quelques clics.\n🎯 Pour les startups : une force de vente agile, sans risque fixe.\n🎓 Pour les étudiants : une expérience terrain valorisante… et rémunératrice.",
     "myOffer": "Mes offres",
     "profil": "Mon profil",
-    "logout":"Se déconnecter"
+    "logout":"Se déconnecter",
+    "exploreOffer": "Explorer de nouvelles offres"
 
 }
