--- a/salesTraction/src/locales/en.json
+++ b/salesTraction/src/locales/en.json
@@ -10,6 +10,6 @@
     "presentationSpeech": "SalesTraction is reinventing how early-stage startups find their first customers — by connecting them with ambitious student sales talents on a commission-only basis.\nWith a user experience inspired by dating apps, you can swipe through offers or profiles, match, and start selling in just a few clicks.\n🚀 For startups: a flexible, risk-free sales force.\n🎓 For students: real-world experience that pays off — in skills and commissions.",
     "myOffer": "My offers",
     "profil": "My profil",
-    "logout":"Logout"
-
+    "logout":"Logout",
+    "exploreOffer":"Explore new offers"
 }
