message(le lien)

--- a/salesTraction/src/locales/en.json
+++ b/salesTraction/src/locales/en.json
@@ -11,5 +11,6 @@
     "myOffer": "My offers",
     "profil": "My profil",
     "logout":"Logout",
-    "exploreOffer":"Explore new offers"
+    "exploreOffer":"Explore new offers",
+    "messages": "Messages"
 }
