--- a/salesTraction/src/locales/fr.json
+++ b/salesTraction/src/locales/fr.json
@@ -11,6 +11,7 @@
     "myOffer": "Mes offres",
     "profil": "Mon profil",
     "logout":"Se déconnecter",
-    "exploreOffer": "Explorer de nouvelles offres"
+    "exploreOffer": "Explorer de nouvelles offres",
+    "messages": "Messagerie"
 
 }
