--- a/salesTraction/src/locales/fr.json
+++ b/salesTraction/src/locales/fr.json
@@ -5,8 +5,8 @@
     "faq": "FAQ",
     "student": "Je suis un étudiant",
     "startup": "Je suis une startup",
-    "meetCommercial": "Rencontre ton commercial",
-    "slogan": "Swipe, match, vends. La plateforme qui connecte étudiants et startups à la recherche de traction commerciale.",
+    "meetCommercial": "SWIPE. MATCH. VENDS.",
+    "slogan": "La plateforme qui connecte étudiants et startups à la recherche de traction commerciale.",
     "presentationSpeech": "SalesTraction révolutionne la manière dont les startups early-stage trouvent leurs premiers clients, en connectant des étudiants ambitieux à des missions de vente rémunérées à la commission.\nGrâce à une interface inspirée des applis de rencontre, swipez les offres ou les profils, matchez, échangez, et commencez à vendre en quelques clics.\n🎯 Pour les startups : une force de vente agile, sans risque fixe.\n🎓 Pour les étudiants : une expérience terrain valorisante… et rémunératrice.",
     "myOffer": "Mes offres",
     "profil": "Mon profil",
