--- a/salesTraction/src/locales/fr.json
+++ b/salesTraction/src/locales/fr.json
@@ -6,12 +6,39 @@
     "student": "Je suis un étudiant",
     "startup": "Je suis une startup",
     "meetCommercial": "SWIPE. MATCH. VENDS.",
+    "altImagePres": "image de présentation",
     "slogan": "La plateforme qui connecte étudiants et startups à la recherche de traction commerciale.",
     "presentationSpeech": "SalesTraction révolutionne la manière dont les startups early-stage trouvent leurs premiers clients, en connectant des étudiants ambitieux à des missions de vente rémunérées à la commission.\nGrâce à une interface inspirée des applis de rencontre, swipez les offres ou les profils, matchez, échangez, et commencez à vendre en quelques clics.\n🎯 Pour les startups : une force de vente agile, sans risque fixe.\n🎓 Pour les étudiants : une expérience terrain valorisante… et rémunératrice.",
     "myOffer": "Mes offres",
     "profil": "Mon profil",
     "logout":"Se déconnecter",
     "exploreOffer": "Explorer de nouvelles offres",
-    "messages": "Messagerie"
+    "messages": "Messagerie",
+    "ERRORSubmitLike": "Erreur de soumition d'un like:",
+    "ERRORSubmitLikeAlert": "La soumission de votre like a échoué. Merci de réessayer",
+    "writeMotivation": "Merci de bien vouloir écrire un message de motivation avant de pouvoir soummettre votre like!",
+    "detectingUser": "Détection des information utilisateur...",
+    "loading": "Chargement",
+    "offer": "Offres",
+    "students": "Etudiants",
+    "submitLike": "Soumission du like...",
+    "showFilters": "Montrer le filtre",
+    "filterOffers": "Filtrage des offres",
+    "region": "Région",
+    "allRegions": "Toutes les régions",
+    "sector": "Secteur",
+    "allSectors": "Tous les secteurs",
+    "commissionRange": "Fourchette de Commission (%)",
+    "to": "à",
+    "workType": "Type de travail",
+    "all": "Tous",
+    "remote": "A distance",
+    "onSite": "Sur site",
+    "resetFilters": "Réinitialisation du filtre",
+    "skip": "Skip",
+    "like": "Like",
+    "languages": "Langue",
+    "interestedIn": "Intéressé par",
+    "linkedInProfile": "Profile LinkedIn"
 
 }
